--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Getting Started</title>
 </head>
 <body>
-    <div>
+    <div class="content">
         <h1>Getting Started</h1>
         <h2>Subsection</h2>
         <p>Paragraph</p>
-        <code>Code</code>
+        <div class="code">
+            <code>Code</code>
+        </div>
+        
         <h2>Subsection</h2>
         <p>Paragraph</p>
         <code>Code</code>
