--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 &lt;body&gt;
     &lt;h1 id="counter"&gt;Cookie Counter: 0&lt;&#47;h1&gt;
     &lt;button id="button"&gt;Click Me&lt;&#47;button&gt;
+    &lt;button id="reset"&gt;Reset&lt;&#47;button&gt;
 &lt;&#47;body&gt;
 &lt;&#47;html&gt;</pre>
                 </div>
