Small content changes

--- a/index.html
+++ b/index.html
@@ -255,7 +255,13 @@ if (Cookies.get('clicks') == undefined) {
 
                 <h2 id="conclusion">Conclusion</h2>
                 <p>Congratulations! You've created your first project with js-cookie!</p>
-                <p>For the complete project code, check out the <a href="">GitHub Repository</a>.</p>
+                <p>
+                    For the complete project code, check out this 
+                    <a href="https://github.com/keatonuw/getting-started/blob/main/cookies.html">GitHub Repository</a>.
+                    To learn more about js-cookie, like how to create temporary, domain-restricted cookies, or
+                    how to use js-cookie with your Node project, view the 
+                    <a href="https://github.com/js-cookie/js-cookie/tree/latest#readme">documentation for the latest release</a>.
+                </p>
 
             </div>
             <div class="contents">
