--- a/cookies.html
+++ b/cookies.html
@@ -9,16 +9,16 @@
     <script type="module">
         import Cookies from './js.cookie.mjs'
 
-        if (Cookies.get('clicks') == undefined) {
+        if (Cookies.get('clicks') === undefined) {
             Cookies.set('clicks', 0);
         }
 
-        let button = document.getElementById("button");
-        let reset = document.getElementById("reset");
-        let count = document.getElementById("counter");
+        let button = document.getElementById('button');
+        let reset = document.getElementById('reset');
+        let count = document.getElementById('counter');
 
         function drawCount() {
-            count.textContent = "Cookie Counter: " + Cookies.get('clicks');
+            count.textContent = 'Cookie Counter: ' + Cookies.get('clicks');
         }
 
         function incrementCookie() {
@@ -31,9 +31,9 @@
             drawCount();
         }
 
-        button.addEventListener("click", incrementCookie);
-        reset.addEventListener("click", resetCookie);
-        window.addEventListener("load", drawCount);
+        button.addEventListener('click', incrementCookie);
+        reset.addEventListener('click', resetCookie);
+        window.addEventListener('load', drawCount);
     </script>
 </head>
 <body>
