--- a/index.html
+++ b/index.html
@@ -14,16 +14,11 @@
             <div class="article">
 
                 <p>
-                    This brief tutorial will introduce you to the usage of js-cookie. By the end of the 
-                    tutorial, you will have created a simple web page that uses cookies to track how 
-                    many times a user has clicked a button in the spirit of Cookie Clicker.
-                </p>
-
-                <h2 id="cookies">Cookies</h2>
-                <p>What are cookies, and how will we use them?</p>
-                <p>
-                    HTTP Cookies are pieces of data that a server will send to a browser to retreive later.
-                    For this guide, you can think of cookies like a map data structure of key-value pairings.
+                    This brief tutorial will introduce you to the usage of <a href="https://github.com/js-cookie/js-cookie">js-cookie</a>. 
+                    By the end of the tutorial, you will have created a simple web page that uses 
+                    <a href="https://www.cisco.com/c/en/us/support/docs/security/web-security-appliance/117925-technote-csc-00.html">cookies</a> 
+                    to track how many times a user has clicked a button. For this guide, 
+                    you can think of cookies like a map data structure of key-value pairings.
                     We'll use this perspective of cookies to use them as variables that persist over the lifetime
                     of the browsing session. Once you're comfortable with the process of creating and setting
                     cookies outlined here, you'll be able to use them in more complicated applications.
@@ -281,7 +276,6 @@ if (Cookies.get('clicks') === undefined) {
             </div>
             <div class="contents">
                 <ol>
-                    <li><a href="#cookies">Cookies</a></li>
                     <li><a href="#prereqs">Prerequisites</a></li>
                     <li><a href="#setup">Setup</a></li>
                     <li><a href="#install">Adding js-cookie</a></li>
