--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     cookies outlined here, you'll be able to use them in more complicated applications with the aid of
                     the main <a href="https://github.com/js-cookie/js-cookie/tree/latest#readme">documentation</a>.
                 </p>
+                <!-- https://www.cisco.com/c/en/us/support/docs/security/web-security-appliance/117925-technote-csc-00.html -->
 
                 <h2 id="prereqs">Prerequisites</h2>
                 <p>This tutorial assumes that you have:</p>
@@ -284,14 +285,17 @@ if (Cookies.get('clicks') === undefined) {
 
             </div>
             <nav class="contents">
-                <ol>
-                    <li><a href="#prereqs">Prerequisites</a></li>
-                    <li><a href="#setup">Setup</a></li>
-                    <li><a href="#install">Adding js-cookie</a></li>
-                    <li><a href="#makecookie">Setting a Cookie</a></li>
-                    <li><a href="#readcookie">Getting a Cookie</a></li>
-                    <li><a href="#conclusion">Conclusion</a></li>
-                </ol>
+                <div>
+                    <h3>Contents</h3>
+                    <ol>
+                        <li><a href="#prereqs">Prerequisites</a></li>
+                        <li><a href="#setup">Setup</a></li>
+                        <li><a href="#install">Adding js-cookie</a></li>
+                        <li><a href="#makecookie">Setting a Cookie</a></li>
+                        <li><a href="#readcookie">Getting a Cookie</a></li>
+                        <li><a href="#conclusion">Conclusion</a></li>
+                    </ol>
+                </div>
             </nav>
         </div>
     </div>
