--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <div class="flex">
             <div class="article">
-                <h1>Getting Started with Javascript Cookies</h1>
+                <h1>Getting Started with JavaScript Cookies</h1>
 
                 <p>
                     This brief tutorial will introduce you to the usage of <a href="https://github.com/js-cookie/js-cookie">js-cookie</a>. 
@@ -38,12 +38,12 @@
                 <h2 id="prereqs">Prerequisites</h2>
                 <p>This tutorial assumes that you have:</p>
                 <ul>
-                    <li>Experience with HTML and Javascript for web development</li>
+                    <li>Experience with HTML and JavaScript for web development</li>
                     <li>A basic understanding of ECMAScript (ES) modules</li>
                     <li>Cookies enabled on your browser</li>
                 </ul>
                 <p>
-                    For resources to learn HTML, Javascript and ES Modules, we recommend you refer to the 
+                    For resources to learn HTML, JavaScript and ES Modules, we recommend you refer to the 
                     <a href="https://developer.mozilla.org/">Mozilla MDN</a>. To enable
                     cookies, please refer to the help section of your browser.
                 </p>
@@ -61,7 +61,7 @@
     &lt;meta charset="UTF-8"&gt;
     &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;
     &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-    &lt;title&gt;Getting Started with Javascript Cookies&lt;&#47;title&gt;
+    &lt;title&gt;Getting Started with JavaScript Cookies&lt;&#47;title&gt;
 &lt;/head&gt;
 &lt;body&gt;
     &lt;h1 id="counter"&gt;Cookie Counter: 0&lt;&#47;h1&gt;
